# industrial-tsad-eval

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.fast-io.yml  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
docs/: acquisition.md  architecture.md  assistant_replay.md  benchmarks.md  contracts.md  docker.md  evidence.md  operator.md  optional_setup.md  plugins.md  profiling.md  providers.md  reproducibility_audit.md  reproduction.md  rq3.md  system.md  thesis_crosswalk.md  thesis_runbook.md  xai.md
examples/reproduction/: providers_llama_cpp.toml  thesis_smoke.toml
scripts/: Invoke-ItseDocker.ps1  Start-LlamaCppServer.ps1  Sync-ItseDockerFastIo.ps1
src/industrial_tsad_eval/: __init__.py
src/industrial_tsad_eval/application/: __init__.py  acquisition.py  assistant_replay.py  audit.py  benchmark.py  evaluation.py  evidence.py  operator.py  preflight.py  preparation.py  profiling.py  reproduction.py  rq3.py  scoring.py  thesis_exports.py  validation.py  xai.py
src/industrial_tsad_eval/domain/: __init__.py  acquisition.py  assistant_replay.py  audit.py  benchmark.py  datasets.py  errors.py  evaluation.py  events.py  evidence.py  llm.py  operator.py  policy.py  profiling.py  progress.py  (+4 more)
tests/: conftest.py  test_acquisition.py  test_architecture.py  test_assistant_replay_reproduction.py  test_audit.py  test_benchmark.py  test_cli.py  test_dataset_adapters.py  test_evaluation.py  test_evidence_xai.py  test_operator.py  test_progress.py  test_registry.py  test_reproduction_performance.py  test_rq3_reproduction.py  test_scoring_and_scores.py  test_system_profile.py  test_torch_detectors.py  test_validation.py
(+48 files in other folders)
